--- a/index.html
+++ b/index.html
@@ -819,51 +819,51 @@
         </div>
       </div>
     </section>
-    <!--
+
     <section class="section services_sec">
       <div class="container">
         <h2 class="section__title title title_xl">Услуги</h2>
         <div class="services_items">
-          <div class="services_item">
+          <a href="#" class="services_item" data-num="01">
             <div class="services_item__image">
               <img src="images/service_bike1.png" alt="bike" class="image" />
             </div>
             <div class="services_item__content">
               <h4 class="services_item__title title_md">Мотокурс “БАЗОВЫЙ”</h4>
-              <div class="services_item__description">
+              <div class="services_item__description text">
                 Короткое описание курса. Для кого, зачем, какие преимущества и
                 результаты получит обучающийся.
               </div>
             </div>
-          </div>
-          <div class="services_item">
+          </a>
+          <a href="#" class="services_item" data-num="02">
             <div class="services_item__image">
               <img src="images/service_bike2.png" alt="bike" class="image" />
             </div>
             <div class="services_item__content">
               <h4 class="services_item__title title_md">Мотокурс “ПРОФИ”</h4>
-              <div class="services_item__description">
+              <div class="services_item__description text">
                 Короткое описание курса. Для кого, зачем, какие преимущества и
                 результаты получит обучающийся.
               </div>
             </div>
-          </div>
-          <div class="services_item">
+          </a>
+          <a href="#" class="services_item" data-num="03">
             <div class="services_item__image">
               <img src="images/service_bike3.png" alt="bike" class="image" />
             </div>
             <div class="services_item__content">
               <h4 class="services_item__title title_md">“МОТОДЖИМХАНА”</h4>
-              <div class="services_item__description">
+              <div class="services_item__description text">
                 Короткое описание курса. Для кого, зачем, какие преимущества и
                 результаты получит обучающийся.
               </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
-
+    <!--
     <section class="section type_content pb-200">
       <div class="container">
         <h2 class="section__title title title_xl">Защита</h2>
