--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
             <div
               class="swiper-slide bike_carousel__slide"
               data-slide-title="HONDA CB 125"
-              data-slide-description="Здесь должен быть какой то целевой текст который описывает класс техники и рассказывает кому и зачем подойдёт именно этот мотоцикл, коротко, ясно, простым языком, чтобы клиент понимал зачем."
+              data-slide-description="Здесь должен быть какой то целевой текст который описывает класс техники и рассказывает кому."
             >
               <div class="circle">
                 <img
@@ -814,7 +814,7 @@
             class="btn wow animate__animated animate__bounceIn"
             data-wow-duration="1s"
             data-wow-delay=".5s"
-            >Посмотреть все</a
+            >Записаться</a
           >
         </div>
       </div>
@@ -863,20 +863,20 @@
         </div>
       </div>
     </section>
-    <!--
-    <section class="section type_content pb-200">
+
+    <section class="section protect_sec type_block pg_bt_big">
       <div class="container">
         <h2 class="section__title title title_xl">Защита</h2>
-        <div class="type_content__inner">
-          <div class="intro__content">
+        <div class="type_block__inner">
+          <div class="type_block__content">
             <h2
-              class="intro__title title title_md wow animate__animated animate__fadeInUp"
+              class="type_block__title title title_md wow animate__animated animate__fadeInUp"
               data-wow-duration="1s"
             >
               <span>Безопасное</span> обучение
             </h2>
             <div
-              class="intro__description text wow animate__animated animate__fadeIn"
+              class="type_block__description text wow animate__animated animate__fadeIn"
               data-wow-duration="1s"
               data-wow-delay=".4s"
             >
@@ -886,13 +886,13 @@
             </div>
             <a
               href="#"
-              class="intro__btn btn wow animate__animated animate__bounceIn"
+              class="type_block__btn btn wow animate__animated animate__bounceIn"
               data-wow-duration="1s"
               data-wow-delay=".6s"
               >Подробнее</a
             >
           </div>
-          <div class="intro__image">
+          <div class="type_block__image img_slider_wrap img_slider_wrap-right">
             <div class="swiper img_slider">
               <div class="swiper-wrapper">
                 <div class="swiper-slide img_slider__slide">
@@ -900,7 +900,7 @@
                     <img
                       src="images/shlem.png"
                       alt="moto"
-                      class="intro__image-abs"
+                      class="type_block__image-abs"
                     />
                   </div>
                 </div>
@@ -909,7 +909,7 @@
                     <img
                       src="images/cerepaxa.png"
                       alt="moto"
-                      class="intro__image-abs"
+                      class="type_block__image-abs"
                     />
                   </div>
                 </div>
@@ -918,17 +918,60 @@
                     <img
                       src="images/perchatki.png"
                       alt="moto"
-                      class="intro__image-abs"
+                      class="type_block__image-abs"
                     />
                   </div>
                 </div>
               </div>
+              <div class="swiper-pagination"></div>
             </div>
           </div>
         </div>
       </div>
     </section>
 
+    <section class="section type_block">
+      <div class="container">
+        <h2 class="section__title title title_xl">Фотозона</h2>
+        <div class="type_block__inner type_block__inner-reverse">
+          <div class="type_block__content">
+            <h2
+              class="type_block__title title title_md wow animate__animated animate__fadeInUp"
+              data-wow-duration="1s"
+            >
+              Создай <span>свой образ</span>
+            </h2>
+            <div
+              class="type_block__description text wow animate__animated animate__fadeIn"
+              data-wow-duration="1s"
+              data-wow-delay=".4s"
+            >
+              Так же наша школа предоставляет технику и экипировку для
+              проведения фотосессий. Вы можете выбрать любой мотоцикл из нашего
+              парка и получить впечатляющие фотографии в нужном образе!
+            </div>
+            <a
+              href="#"
+              class="type_block__btn btn wow animate__animated animate__bounceIn"
+              data-wow-duration="1s"
+              data-wow-delay=".6s"
+              >Подробнее</a
+            >
+          </div>
+          <div class="type_block__image">
+            <div class="circle">
+              <img
+                src="images/girl.png"
+                alt="moto"
+                class="type_block__image-abs"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--
     <section class="section type_content">
       <div class="container">
         <h2 class="section__title title title_xl">Фотозона</h2>
