--- a/index.html
+++ b/index.html
@@ -971,53 +971,61 @@
       </div>
     </section>
 
-    <!--
-    <section class="section type_content">
+    <section class="section type_block">
       <div class="container">
-        <h2 class="section__title title title_xl">Фотозона</h2>
-        <div class="type_content__inner type_content__inner-rr">
-          <div class="intro__inner">
-            <div class="intro__content">
-              <h2
-                class="intro__title title title_md wow animate__animated animate__fadeInUp"
-                data-wow-duration="1s"
-              >
-                <span>Мотошкола "STREET BIKE"</span> в Ростове-на-Дону
-              </h2>
-              <div
-                class="intro__description text wow animate__animated animate__fadeIn"
-                data-wow-duration="1s"
-                data-wow-delay=".4s"
-              >
-                Обучение вождению мотоцикла с приобретением всем необходимых
-                навыков безопасного вождения с положительными эмоциями!
-              </div>
-              <a
-                href="#"
-                class="intro__btn btn wow animate__animated animate__bounceIn"
-                data-wow-duration="1s"
-                data-wow-delay=".6s"
-                >Узнать стоимость</a
-              >
+        <h2 class="section__title title title_xl">Прочее</h2>
+        <div class="type_block__inner type_block__single">
+          <div class="type_block__content">
+            <h2
+              class="type_block__title title title_md wow animate__animated animate__fadeInUp"
+              data-wow-duration="1s"
+            >
+              <span>Подготовка</span> документов
+            </h2>
+            <div
+              class="type_block__description text wow animate__animated animate__fadeIn"
+              data-wow-duration="1s"
+              data-wow-delay=".4s"
+            >
+              После окончания курса мы подготавливаем полный пакет документов на
+              категорию "А" для дальнейшей сдачи экзамена в МРЭО и получения
+              водительского удостоверения.
             </div>
-            <div class="intro__image">
-              <div
-                class="circle wow animate__animated animate__zoomIn"
-                data-wow-duration="1s"
-                data-wow-delay=".3s"
-              >
-                <img
-                  src="images/moto.png"
-                  alt="moto"
-                  class="intro__image-abs wow animate__animated animate__fadeInRight"
-                  data-wow-duration="1s"
-                  data-wow-delay=".5s"
-                />
-              </div>
-            </div>
+            <a
+              href="#"
+              class="type_block__btn btn wow animate__animated animate__bounceIn"
+              data-wow-duration="1s"
+              data-wow-delay=".6s"
+              >Подробнее</a
+            >
+          </div>
+          <div class="type_block__image">
+            <img src="images/ud.png" alt="ud" class="image" />
           </div>
         </div>
       </div>
-    </section>-->
+    </section>
+
+    <div class="request_block">
+      <div class="container">
+        <div class="request_block__wrapper">
+          <div class="request_block__content">
+            <h2 class="request_block__title title title_md">
+              Остались вопросы?
+            </h2>
+            <div class="request_block__description text">
+              Оставьте заявку на бесплатную консультацию. Мы перезвоним Вам в
+              течение 15 минут!
+            </div>
+            <a href="#" class="btn btn_dark">Получить консультацию</a>
+            <img
+              src="images/form_bike.png"
+              alt="form"
+              class="request_block__image"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
