--- a/index.html
+++ b/index.html
@@ -1006,6 +1006,28 @@
       </div>
     </section>
 
+    <section class="sm_block intro_sec">
+      <div class="container">
+        <div class="type_block__inner">
+          <div class="type_block__image">
+            <div
+              class="circle wow animate__animated animate__fadeIn"
+              data-wow-duration="1s"
+              data-wow-delay=".3s"
+            >
+              <img
+                src="images/form_bike.png"
+                alt="moto"
+                class="type_block__image-abs wow animate__animated animate__bounceIn"
+                data-wow-duration="1.4s"
+                data-wow-delay=".5s"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <div class="request_block">
       <div class="container">
         <div class="request_block__wrapper">
